[gd_scene load_steps=15 format=3 uid="uid://q36jmet8kwi3"]

[ext_resource type="Script" path="res://src/maps/start.gd" id="1_0fpax"]
[ext_resource type="PackedScene" uid="uid://si8x0dth8a8" path="res://src/maps/map_assets/ending_tile.tscn" id="2_bk0kt"]
[ext_resource type="FontFile" uid="uid://53rqvhde40eb" path="res://src/maps/map_assets/EndingFont.ttf" id="3_07k8b"]
[ext_resource type="Texture2D" uid="uid://bsuo4g5v1d811" path="res://sprites/wukong/Wukong_Full_Anim.png" id="4_uwkmj"]
[ext_resource type="Texture2D" uid="uid://bk7ncp0den0rx" path="res://sprites/wukong/Wukong_Shadow.png" id="5_0qa8r"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kdtec"]
atlas = ExtResource("4_uwkmj")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0yo0"]
atlas = ExtResource("4_uwkmj")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vg5qj"]
atlas = ExtResource("4_uwkmj")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wdd7"]
atlas = ExtResource("4_uwkmj")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uo74k"]
atlas = ExtResource("4_uwkmj")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8w0vr"]
atlas = ExtResource("4_uwkmj")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yc7e4"]
atlas = ExtResource("4_uwkmj")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8ovy"]
atlas = ExtResource("4_uwkmj")
region = Rect2(224, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_0f7w0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdtec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0yo0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vg5qj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wdd7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uo74k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8w0vr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yc7e4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8ovy")
}],
"loop": true,
"name": &"default",
"speed": 9.0
}]

[node name="start" type="Node2D"]
script = ExtResource("1_0fpax")

[node name="TileMap" parent="." instance=ExtResource("2_bk0kt")]
position = Vector2(3636, -460)
scale = Vector2(3.2, 3.2)

[node name="Title" type="Label" parent="."]
texture_filter = 1
offset_left = 22.0
offset_top = 121.0
offset_right = 722.0
offset_bottom = 221.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_07k8b")
theme_override_font_sizes/font_size = 100
text = "Journey Too far West"

[node name="Lobo" type="Label" parent="."]
offset_left = 30.0
offset_top = 214.0
offset_right = 505.0
offset_bottom = 285.0
theme_override_colors/font_color = Color(0.0156863, 0.435294, 0.647059, 1)
theme_override_fonts/font = ExtResource("3_07k8b")
theme_override_font_sizes/font_size = 70
text = "A Lobo digital Game"

[node name="Lobo2" type="Label" parent="."]
offset_left = 24.0
offset_top = 333.0
offset_right = 901.0
offset_bottom = 534.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_07k8b")
theme_override_font_sizes/font_size = 47
text = "The Monkey King was supposed to stop at India, but he fell asleep on his Nimbus Cloud. He wakes up to find himself in America. Now he must fight his way across the red white and blue to make it back home..."
autowrap_mode = 2

[node name="quit" type="Button" parent="."]
texture_filter = 1
offset_left = 957.0
offset_top = 493.0
offset_right = 1103.0
offset_bottom = 572.0
theme_override_fonts/font = ExtResource("3_07k8b")
theme_override_font_sizes/font_size = 70
text = "Quit"

[node name="controls" type="Button" parent="."]
texture_filter = 1
offset_left = 896.0
offset_top = 409.0
offset_right = 1104.0
offset_bottom = 488.0
theme_override_fonts/font = ExtResource("3_07k8b")
theme_override_font_sizes/font_size = 70
text = "controls
"

[node name="start" type="Button" parent="."]
texture_filter = 1
offset_left = 957.0
offset_top = 325.0
offset_right = 1103.0
offset_bottom = 404.0
theme_override_fonts/font = ExtResource("3_07k8b")
theme_override_font_sizes/font_size = 70
text = "Start
"

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.466667, 0.466667, 0.466667, 1)
position = Vector2(947.5, 282.75)
scale = Vector2(2.96875, 1.65625)
texture = ExtResource("5_0qa8r")

[node name="StartWukong" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(947, 187)
scale = Vector2(6.1875, 6.1875)
sprite_frames = SubResource("SpriteFrames_0f7w0")

[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
